--- a/src/pages/Home/components/IdentitySection/IdentitySection.module.css
+++ b/src/pages/Home/components/IdentitySection/IdentitySection.module.css
@@ -1,10 +1,10 @@
 .wrapper {
   position: relative;
-  margin-bottom: 4rem;
+  margin-bottom: 1.5rem;
 }
 
 .section {
-  padding: 4rem 4.5rem 2rem;
+  padding: 1.5rem 4.5rem 2rem;
   max-width: 1400px;
   margin: 0 auto;
   position: relative;
@@ -22,20 +22,21 @@
   line-height: 1.2;
 }
 
+/* Wrapper stays centered (section + list); bullets left-aligned inside list */
 .identityList {
   list-style: none;
-  padding: 0;
+  padding: 0 1.5rem;
   margin: 0 auto;
   max-width: 560px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .identityItem {
   display: flex;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 0.75rem;
   font-size: 1.125rem;
   line-height: 1.6;
@@ -60,11 +61,11 @@
 
 @media (max-width: 768px) {
   .wrapper {
-    margin-bottom: 3rem;
+    margin-bottom: 1.25rem;
   }
 
   .section {
-    padding: 3rem 2rem 1.5rem;
+    padding: 1.25rem 2rem 1.5rem;
   }
 
   .heading {
@@ -79,11 +80,16 @@
 
 @media (max-width: 480px) {
   .wrapper {
-    margin-bottom: 2.5rem;
+    margin-bottom: 1rem;
   }
 
   .section {
-    padding: 2rem 1rem 1rem;
+    padding: 1rem 1rem 1rem;
+  }
+
+  .identityList {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
   }
 
   .heading {
