--- a/src/pages/Home/components/Support/Support.module.css
+++ b/src/pages/Home/components/Support/Support.module.css
@@ -28,9 +28,8 @@
 .heading {
   font-size: 2rem;
   font-weight: 500;
-  font-style: italic;
   margin: 0;
-  color: #6b7280;
+  color: var(--teal) !important;
   font-family: 'Inter', sans-serif;
   line-height: 1.3;
   letter-spacing: -0.01em;
